update on css checkpoint project

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Checkpoint Project</title>
 </head>
 <body>
   <!--header-->
   <header>
-    <h1>Stevie Mario</h1>
     <!--Nav-->
     <nav>
+      <h1><a href="index.html">stevie obum</a></h1>
+      <div class="navlinks">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#About">About</a></li>
@@ -18,30 +20,57 @@
         <li><a href="#Resume">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
       </ul>
+      </div>
     </nav>
   </header>
 <!--main area-->
   <main>
     <!--About section-->
-      <section id="About">
+      <section id="About" class="About">
         <figure>
         <img src="images/IMG_5376.jpg" alt="Stephen" width="400" height="400">
         <figcaption>Stephen</figcaption>
         </figure>
+        <div class="heroTEXT">
         <p>I am Okoye Obumneme Stephen, an aspiring front-end website developer and a professional photographer.</p>
+        </div>
       </section>
 
         <!--Portfolio/ Work section-->
       <section id="Work">
         <h2>Some of my photography work</h2>
+    <div class="Work">
+        <figure>
         <img src="images/pexels-hayley-parker-6137776.jpg" width="250" height="250">
+        <figcaption>City of Amsterdam</figcaption>
+        </figure>
+
+
+        <figure>
         <img src="images/pexels-jose-antonio-gallego-vázquez-2167395.jpg" width="250" height="250">
+        <figcaption>Julio Caesar</figcaption>
+        </figure>
+
+        <figure>
         <img src="images/pexels-leah-kelley-952590.jpg" width="250" height="250">
+        <figcaption>Salvatore Mundi</figcaption>
+        </figure>
+
+        <figure>
         <img src="images/pexels-rov-camato-700413.jpg" width="250" height="250">
+        <figcaption>Museum Nights</figcaption>
+        </figure>
+
+        <figure>
         <img src="images/pexels-saidamir-mukhitdinov-11542282.jpg" width="250" height="250">
+        <figcaption>Woods of Berlikn</figcaption>
+        </figure>
+
+
         <video width="250" height="250" controls>
           <source src="images/IMG_2539.MOV" type="video/mp4">
         </video>
+      </div>
       </section>
         <!--Resume section-->
       <section id="Resume">
